<resources>
    <string name="app_name">小目标钱包专业版</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="aim">小目标</string>
    <string name="aim_u"><u>小目标</u></string>
    <string name="search">发现</string>
    <string name="message">消息</string>
    <string name="my">我的</string>

    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="phone">手机号</string>
    <string name="code">验证码</string>
    <string name="password">密码</string>
    <string name="password_new">新的密码</string>
    <string name="forget_password">忘记密码</string>

    <string name="invitation_code">邀请码</string>

    <string name="money_sign">￥</string>

    <string name="pay">支付</string>
    <string name="pay_detail">支付详情</string>
    <string name="aim_budget">目标预算</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="balance_pay">余额支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="union_pay">银联支付</string>

    <string name="pay_money">支付金额</string>
    <string name="finish">完成</string>

    <string name="aim_upgrade">目标已达当前等级最大个数,请提升等级</string>

    <string name="disclaimer">本人已阅读&#60;&#60;相关协议&#62;&#62;,且已理解其内容并承担相关风险</string>
    <string name="disclaimer2">同意服务协议及风险提示</string>
    <string name="rad_null">哦哦 没有获得感谢红包哦</string>
    <string name="set_password">请先设置支付密码</string>

    <string name="attention">关注</string>
    <string name="city">同城</string>
    <string name="hot">热门</string>
    <string name="transfer_mine_fragment">期权转让</string>
    <string name="shop_mine_fragment">积分商城</string>
    <string name="task_mine_fragment">任务中心</string>
    <string name="follow_mine_fragment">我的关注</string>
    <string name="collect_mine_fragment">我的收藏</string>
    <string name="looks_mine_fragment">浏览记录</string>
    <string name="changyong_mine_fragment">常用工具</string>
    <string name="wallet_mine_fragment">钱包</string>
    <string name="target_mine_fragment">我的目标</string>
    <string name="bean_mine_fragment">金豆</string>
    <string name="red_mine_fragment">红包</string>
    <string name="distribution_mine_fragment">合作伙伴</string>
    <string name="extension_mine_fragment">推广码</string>
    <string name="illness_mine_fragment">大病互助</string>
    <string name="title_user_activity">个人资料</string>
    <string name="icon_user_activity">头像</string>
    <string name="username_user_activity">昵称</string>
    <string name="content_user_activity">个性签名</string>
    <string name="dengji_user_activity">等级</string>
    <string name="wx_user_activity">微信</string>
    <string name="phone_user_activity">手机号</string>

    <string name="title_updata_name">更改昵称</string>
    <string name="title_updata_content">更改签名</string>
    <string name="updata_ok">修改成功</string>


    <string name="transfer_u"><u>期权相关政策</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
