<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_system_list"
    android:orientation="vertical">


    <include layout="@layout/view_include" />

    <RelativeLayout
        android:id="@+id/rl_icon_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_selector_white_gray"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">

        <TextView
            style="@style/text_black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/icon_user_activity" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/icon_user"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/icon_user" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_username_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/background_selector_white_gray"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">

        <TextView
            style="@style/text_black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/username_user_activity" />

        <TextView
            android:id="@+id/tv_username_user"
            style="@style/text_gray_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:maxLength="10"
            android:singleLine="true"
            android:text="阿萨阿萨大大萨达撒啊" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_content_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rl_height"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/background_selector_white_gray"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/resl"
            style="@style/text_black_14"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/content_user_activity" />

        <TextView
            android:id="@+id/tv_brief_user"
            style="@style/text_gray_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:maxLength="30"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_denji_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/background_selector_white_gray"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            style="@style/text_black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/dengji_user_activity" />

        <ImageView
            android:id="@+id/img_level_user"
            style="@style/text_gray_14"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="" />

        <TextView
            android:id="@+id/tv_level_user"
            style="@style/text_gray_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="Lv0"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_wx_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_selector_white_gray"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">

        <TextView
            style="@style/text_black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/wx_user_activity" />

        <TextView
            android:id="@+id/tv_wxBind_user"
            style="@style/text_gray_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="绑定" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_phone_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/background_selector_white_gray"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">

        <TextView
            style="@style/text_black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/phone_user_activity" />

        <TextView
            android:id="@+id/tv_phoneBind_user"
            style="@style/text_gray_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="绑定" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/black_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_selector_white_gray"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">

        <TextView
            style="@style/text_black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="黑名单" />
    </RelativeLayout>
</LinearLayout>