<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_system_list"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/view"
        android:background="@color/chat_top"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/left_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@mipmap/icon_arrow_white_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pay_detail"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/right_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@mipmap/icon_help_aim"
            android:visibility="gone" />

    </RelativeLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/icon_pay_success" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="支付成功"
        android:textColor="@color/black"
        android:textSize="16dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/pay_mode_text"
                style="@style/black_light_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/union_pay" />

            <TextView
                android:id="@+id/card_text"
                style="@style/black_light_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/background_system_list" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                style="@style/black_light_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_money" />

            <TextView
                android:id="@+id/money_text"
                style="@style/black_light_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/union_pay" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/finish_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_yellow_gray_right_corner"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="18dp" />

</LinearLayout>
